deployment/ingress-nginx/overlays/beta/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    ingress: ingress-nginx
  annotations:
    healthcheck-path: /healthz
    healthcheck-success-status-code: "200"
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: test.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 80
  tls:
    - hosts: [ test.com ]
